# QuarkWidgets

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: qw_add_test.cmake
embedded/: CMakeLists.txt
embedded/examples/: CMakeLists.txt
embedded/include/QuarkWidgets/: QuarkBulb.hpp  Theme.hpp  UartTerminalView.hpp
embedded/src/: LedPanel.cpp  UartTerminalView.cpp
embedded/test/: CMakeLists.txt  test_uartterminalview.cpp
example/: CMakeLists.txt
example/gui/material/: CMakeLists.txt
example/gui/material/material_color_scheme/: CMakeLists.txt  MaterialColorSchemeMainWindow.cpp  MaterialColorSchemeMainWindow.h  main.cpp
example/gui/material/material_motion_spec/: CMakeLists.txt  MaterialMotionSpecMainWindow.cpp  MaterialMotionSpecMainWindow.h  main.cpp
example/gui/material/material_radius_scale/: CMakeLists.txt  MaterialRadiusScaleMainWindow.cpp  main.cpp  (+1 more)
example/gui/theme/: CMakeLists.txt  ColorSchemePage.cpp  ColorSchemePage.h  MaterialGalleryMainWindow.cpp  MaterialGalleryMainWindow.h  MotionSpecPage.cpp  MotionSpecPage.h  RadiusScalePage.cpp  RadiusScalePage.h  ThemePageWidget.cpp  ThemePageWidget.h  ThemeSidebar.cpp  ThemeSidebar.h  ToastWidget.cpp  ToastWidget.h  TypographyPage.cpp  TypographyPage.h  main.cpp
example/ui/widget/: CMakeLists.txt
examples/: CMakeLists.txt  bulb_example.cpp  ledpanel_example.cpp  quarkwidgets_example.cpp  uartterminal_example.cpp
include/QuarkWidgets/: LedPanel.hpp  quarkwidgets.hpp
src/: LedPanel.cpp  QuarkBulb.cpp  quarkwidgets.cpp
test/: CMakeLists.txt  test_ledpanel.cpp  test_quarkbulb.cpp
test/ui/base/: CMakeLists.txt  color_helper_test.cpp  color_test.cpp  device_pixel_test.cpp  easing_test.cpp  geometry_helper_test.cpp  math_helper_test.cpp
test/ui/components/: CMakeLists.txt  elevation_controller_test.cpp  focus_ring_test.cpp  painter_layer_test.cpp  ripple_helper_test.cpp  state_machine_test.cpp
test/ui/core/: CMakeLists.txt
test/ui/widget/: CMakeLists.txt  button_test.cpp  checkbox_test.cpp  combobox_test.cpp  doublespinbox_test.cpp  groupbox_test.cpp  label_test.cpp  listview_test.cpp  progressbar_test.cpp  radiobutton_test.cpp  scrollview_test.cpp  separator_test.cpp  slider_test.cpp  spinbox_test.cpp  switch_test.cpp  tableview_test.cpp  tabview_test.cpp  textarea_test.cpp  textfield_test.cpp  treeview_test.cpp  widget_test_helper.h
ui/: CMakeLists.txt  export.h  quarkwidgets_version.cpp  quarkwidgets_version.h
ui/base/: CMakeLists.txt  color.cpp  color.h  color_helper.cpp  color_helper.h  device_pixel.cpp  device_pixel.h  easing.cpp  easing.h  geometry_helper.cpp  geometry_helper.h  math_helper.cpp  math_helper.h  qt_format.h
ui/components/: CMakeLists.txt  animation.cpp  animation.h  animation_factory_manager.cpp  animation_factory_manager.h  animation_group.h  spring_animation.h  timing_animation.cpp  timing_animation.h
ui/components/material/: CMakeLists.txt  cfmaterial_animation_factory.cpp  cfmaterial_animation_factory.h  cfmaterial_animation_strategy.cpp  cfmaterial_animation_strategy.h  cfmaterial_fade_animation.cpp  cfmaterial_fade_animation.h  cfmaterial_property_animation.cpp  cfmaterial_property_animation.h  cfmaterial_scale_animation.cpp  cfmaterial_scale_animation.h  cfmaterial_slide_animation.cpp  cfmaterial_slide_animation.h
ui/components/material/token/: animation_token_literals.h  animation_token_mapping.h
ui/core/: CMakeLists.txt  color_scheme.h  font_type.h  motion_spec.h  radius_scale.h  theme.h  theme_factory.h  theme_manager.cpp  theme_manager.h
ui/core/material/: CMakeLists.txt  cfmaterial_fonttype.cpp  cfmaterial_fonttype.h  cfmaterial_motion.cpp  cfmaterial_motion.h  cfmaterial_radius_scale.cpp  cfmaterial_radius_scale.h  cfmaterial_scheme.cpp  cfmaterial_scheme.h  cfmaterial_theme.cpp  cfmaterial_theme.h  material_factory.cpp  material_factory.hpp  material_factory_class.h
ui/core/token/material_scheme/: cfmaterial_token_literals.h
ui/core/token/motion/: cfmaterial_motion_token_literals.h
ui/core/token/radius_scale/: cfmaterial_radius_scale_literals.h
ui/core/token/theme_name/: material_theme_name.h
ui/core/token/typography/: cfmaterial_typography_token_literals.h
ui/models/: CMakeLists.txt
ui/widget/: CMakeLists.txt
ui/widget/application_support/: application.cpp  application.h
ui/widget/material/application/: material_application.cpp  material_application.h
ui/widget/material/base/: elevation_controller.cpp  elevation_controller.h  focus_ring.cpp  focus_ring.h  material_widget_base.cpp  material_widget_base.h  painter_layer.cpp  painter_layer.h  ripple_helper.cpp  ripple_helper.h  state_machine.cpp  state_machine.h
ui/widget/material/widget/button/: button.cpp  button.h
ui/widget/material/widget/checkbox/: checkbox.cpp  checkbox.h
ui/widget/material/widget/comboBox/: combobox.cpp  combobox.h
ui/widget/material/widget/doublespinbox/: doublespinbox.cpp  doublespinbox.h
ui/widget/material/widget/groupbox/: groupbox.cpp  groupbox.h
ui/widget/material/widget/label/: label.cpp  label.h
ui/widget/material/widget/listview/: listview.cpp  listview.h
ui/widget/material/widget/progressbar/: progressbar.cpp  progressbar.h
ui/widget/material/widget/radiobutton/: radiobutton.cpp  radiobutton.h
ui/widget/material/widget/scrollview/: scrollview.cpp  scrollview.h
ui/widget/material/widget/separator/: separator.cpp  separator.h
ui/widget/material/widget/slider/: slider.cpp  slider.h
ui/widget/material/widget/spinbox/: spinbox.cpp  spinbox.h
ui/widget/material/widget/switch/: switch.cpp  switch.h
ui/widget/material/widget/tableview/: tableview.cpp  tableview.h
ui/widget/material/widget/tabview/: tabview.cpp  tabview.h
ui/widget/material/widget/tabview/private/: materialtabbar.cpp  materialtabbar.h
ui/widget/material/widget/textarea/: textarea.cpp  textarea.h
ui/widget/material/widget/textfield/: textfield.cpp  textfield.h
ui/widget/material/widget/treeview/: treeview.cpp  treeview.h
ui/widget/material/widget/treeview/private/: treeviewdelegate.cpp  treeviewdelegate.h
(+46 files in other folders)
